Fixed search bar alignment.

--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ body
 	position: absolute;
 
 	top: 20px;
-
+    left: 142px;
+	
 	text-align: right;
 	width: calc(100% - 230px);
 }
